src/50_mobile/__mobile.scss
/* ... */
.is-tablet .workspace-drawer-tab-options-list {
	margin-inline: 6px 8px;
	width: calc(100% - 14px);
}
.is-mobile .workspace-drawer-tab-options-list > .workspace-tab-header > .workspace-tab-header-inner {
	border-radius: calc(var(--touch-radius-xs) * 0.5625);
}
.is-phone .workspace-drawer-tab-options-list {
	padding-block-end: calc(var(--touch-size-l) + 4px);
}
.is-tablet .workspace-drawer-tab-options-list {
	padding-block-start: calc(var(--touch-size-l) + 4px);
}

// nav action buttons
.is-mobile .nav-buttons-container {
	gap: 4px;
	--interactive-normal: transparent;
	--icon-color: var(--text-normal);
}
.is-mobile .nav-buttons-container > .nav-action-button {
	width: var(--touch-size-l);
	z-index: 1;
}

// Sliders and Toggles

.is-mobile input[type="range"]::-webkit-slider-runnable-track {
	padding-inline: 6px;
}

.is-tablet input[type="range"] {
	width: 124px;
}

// Tab switcher phone

.mobile-tab-switcher-menubar .clickable-icon {
	padding: 12px 16px;
}

// Metadata

.is-mobile .metadata-content {
	background-color: transparent;
}
.is-mobile .metadata-property {
	border-radius: var(--radius-sm);
}
.is-mobile .metadata-add-button {
	height: var(--input-height);
	padding-inline: calc(var(--input-height) / 3);
}
.is-phone .metadata-properties-heading > .collapse-indicator {
	--collapse-icon-color: transparent;
}

// Menu

.is-phone .menu-scroll {
	margin-block: 0;
	margin-inline: 16px;
	padding: 4px 4px var(--safe-area-inset-bottom) 4px;
	border-radius: var(--touch-radius-xxs) var(--touch-radius-xxs) 0 0;
}
.is-phone .menu-group .menu-item.tappable {
	box-shadow: var(--shadow-setting-items);
}

// Modal

.is-phone .modal-title {
	font-size: 20px;
}
.is-phone .modal.mod-settings.mod-sidebar-layout {
	--modal-header-height: calc(var(--safe-area-inset-top) + 52px);
}

.is-phone .modal .modal-setting-back-button {
	inset-block-end: 8px;
}

.is-phone .mobile-tab-switcher {
	backdrop-filter: var(--blur-s);
}
.is-phone .setting-item-control > :is(input[type="range"], input[type="range"].mobile-tap) {
	width: 50% !important; 
}


// Main Navbar

.mobile-navbar.mod-raised {
	padding: 4px;
}
body.is-phone .mobile-navbar-action {
	min-width: 0;
	margin-inline-start: 0;
}

// Command Prompt

.is-mobile:not(.is-phone) .prompt {
	height: auto;
	inset-block: 12vh;
	margin-block: 0;
}
.is-phone .prompt {
	margin-inline: 2px;
	width: auto;
}
.is-phone .prompt-results > .suggestion-item {
	padding-inline: 20px;
	border-radius: var(--touch-radius-s);
}
.is-phone .prompt-results {
	padding: 12px;
}
.is-phone .prompt-results::-webkit-scrollbar {
	display: none;
}
.is-phone .prompt .suggestion-item {
	padding-inline: 24px;
	border-radius: var(--touch-radius-xxs);
}

// Settings
.is-tablet .modal.mod-settings .vertical-tab-content {
	background-color: transparent;
}

.is-mobile .modal.mod-settings .vertical-tab-content {
  background: var(--settings-background);
}

.is-mobile .mod-settings .setting-group > .setting-items .setting-item {
	padding-inline: 0;
}
.is-tablet .mod-settings .setting-group > .setting-items .setting-item {
	padding-inline: 5px 0;
}
.is-tablet .horizontal-tab-nav-item,
.is-tablet .vertical-tab-nav-item {
	border-radius: var(--nav-item-radius);
	padding-block: calc(var(--vl-layout-padding) * 1.25) !important;
}
.is-phone .vertical-tab-header-group-title {
	padding-inline-start: 20px;
}
.is-phone .setting-item {
	border-radius: var(--touch-radius-xxs);
}
.is-phone .style-settings-heading[data-id*="obsidian-velocity"] {
	border-radius: var(--touch-radius-xxs);
}
.is-phone .setting-items .setting-item > .setting-item-info {
	padding-inline-start: 4px;
}



.is-phone .modal.mod-settings .vertical-tab-header-group-items > :first-child {
	padding-block-start: 6px;
	height: calc(var(--touch-size-l) + 6px);
}
.is-phone .modal.mod-settings .vertical-tab-header-group-items > :last-child {
	padding-block-end: 6px;
	height: calc(var(--touch-size-l) + 6px);
}

.is-mobile input[type="color"] {
	height: 100%;
	width: unset !important;
}

// Vault profile/Drawer

.workspace-drawer-header-name-text {
	font-variation-settings: "opsz" 28;
	font-weight: var(--vault-profile-font-weight);
}

.is-phone .metadata-properties-title {
	font-weight: var(--font-semibold);
}

// View header

.is-tablet .workspace-tab-header-tab-list > .clickable-icon {
	--icon-size: var(--icon-l);
}
.is-phone .view-header-left {
	display: none;
}
.is-phone .view-header-title-container {
	padding-inline-start: 16px;
}
.is-phone .view-header-title {
	padding-inline-start: 0;
}
.is-mobile .mod-raised {
	border-radius: var(--touch-radius-s);
}

// TABLET

// tablet main workspace
.is-tablet .workspace-drawer:not(.is-pinned) > * {
	box-shadow: var(--shadow-fab);
}
.is-tablet .workspace-drawer.is-pinned .nav-buttons-container {
	--icon-color: var(--text-muted);
}

.is-tablet .mod-root .workspace-tabs {
	overflow: visible;
}
.is-tablet .is-left-sidedock-open > .mod-root {
	padding-inline-start: 0 !important;
}
.is-tablet .is-right-sidedock-open > .mod-root {
	padding-inline-end: 0 !important;
}
.is-tablet .workspace-drawer.is-pinned,
.is-tablet .workspace-drawer-active-tab-content,
.is-tablet .workspace-leaf,
.is-tablet .workspace-leaf-content,
.is-tablet .node-insert-event {
	z-index: 0;
}

.is-tablet .mod-root {
	padding-block-end: calc(var(--touch-size-xxs) / 2);
	padding-inline: calc(var(--touch-size-xxs) / 2) !important;
	transition: padding var(--anim-duration-moderate) var(--vl-ease-out);
	z-index: 2;
}
.is-tablet .mod-root .workspace-tab-container {
	border-radius: var(--touch-radius-xxs);
	box-shadow: var(--shadow-workspace);
}
.is-tablet .workspace-drawer .workspace-drawer-active-tab-container {
	background-color: transparent;
}

// tablet root tabs
.is-tablet .mod-root .workspace-tab-header-container {
	padding-block: 4px 8px;
	--tab-container-background: transparent;
}
.is-tablet .mod-root .workspace-tab-header-container-inner {
	gap: 4px;
	padding-block: 4px;
}
/* ... */

